--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.24",
+    "@heroui/card": "^2.2.23",
+    "@heroui/input": "^2.4.25",
+    "@heroui/react": "^2.8.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -43,14 +47,15 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.12",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "^19.1.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
